# black-formatter-uv-project

./: .gitignore  README.md  pyproject.toml  test-black.ipynb  test-black.py  test-black.txt
